gitops/manifests/istio-mesh/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    istio-injection: enabled
